Fix always left align drop down button text

--- a/src/styles/_summary.scss
+++ b/src/styles/_summary.scss
@@ -471,13 +471,13 @@
 
       button {
         background-color: #ffffff;
-        cursor: pointer;
       }
     }
 
     button {
       background-color: #fafafa;
       cursor: pointer;
+      text-align: left;
     }
 
   }
